<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/CounterButtons">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ExerciseTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/counter_title"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/MuscleImage"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/activity_vertical_margin"
                         />
                </LinearLayout>

                <TextView
                    android:id="@+id/PointsEarntOutput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginVertical="@dimen/default_padding_bottom"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/StartButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/start_exercise"
                        android:textSize="35sp" />

                    <TextView
                        android:id="@+id/TimeRemaining"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        android:textColor="@color/black"
                        android:textSize="50sp"/>

                </FrameLayout>

                <TextView
                    android:id="@+id/RepCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/Slidertitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:visibility="visible"
                    android:text="@string/slider_title"/>

                <com.google.android.material.slider.Slider
                    android:id="@+id/repTimeSlider"
                    android:visibility="visible"
                    android:enabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="4"
                    android:stepSize="1"
                    android:valueFrom="1"
                    android:valueTo="10"/>

            </LinearLayout>

        </FrameLayout>

    </ScrollView>

    <FrameLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/CounterButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/ReturnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:text="@string/return_button" />

        <Button
            android:id="@+id/MuteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:text="@string/mute_button" />

        <Button
            android:id="@+id/PauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:text="@string/pause_button" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>