<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Screens.RoutineAndExercise.FinishFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

    <TextView
        android:id="@+id/finish_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/remaining_exercises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/remaining_exercises_in_this_set"/>


            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/finish_list_view"
                android:divider="@color/transparent"/>
        </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/restText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_a_rest_time_until_next_exercise"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/finish_rest_remaining"
                android:textSize="25sp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_continue_button"
        android:id="@+id/continue_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_to_main_menu_button"
        android:id="@+id/exit_button"/>

    <Button
        android:id="@+id/toEndSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End Summary Page"
        android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>