<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infoPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.RoutineAndExercise.InformationFragment"
    android:orientation="vertical">

    <Button
        android:layout_gravity='bottom|end'
        android:id="@+id/toCounterPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/ready_button"/>

    <Button
        android:layout_gravity="bottom|start"
        android:id="@+id/exit_to_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/exit_to_main_menu_button"/>

    <uk.ac.york.nimblefitness.MediaHandlers.Graphics.ShapeView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/information_shape_view"/>

</FrameLayout>